v3.5.0 Conflicts: 	common/src/main/java/de/keksuccino/fancymenu/customization/action/actions/level/JoinServerAction.java 	common/src/main/java/de/keksuccino/fancymenu/customization/element/AbstractElement.java 	common/src/main/java/de/keksuccino/fancymenu/customization/element/elements/button/custombutton/ButtonEditorElement.java 	common/src/main/java/de/keksuccino/fancymenu/customization/element/elements/button/custombutton/ButtonElement.java 	common/src/main/java/de/keksuccino/fancymenu/customization/element/elements/button/vanillawidget/VanillaWidgetEditorElement.java 	common/src/main/java/de/keksuccino/fancymenu/customization/element/elements/slider/v2/SliderEditorElement.java 	common/src/main/java/de/keksuccino/fancymenu/customization/layout/LayoutHandler.java 	common/src/main/java/de/keksuccino/fancymenu/customization/layout/editor/LayoutEditorUI.java 	common/src/main/java/de/keksuccino/fancymenu/customization/layout/editor/actions/BuildActionScreen.java 	common/src/main/java/de/keksuccino/fancymenu/customization/layout/editor/loadingrequirements/BuildRequirementScreen.java 	common/src/main/java/de/keksuccino/fancymenu/customization/layout/editor/widget/widgets/layer/LayerLayoutEditorWidget.java 	common/src/main/java/de/keksuccino/fancymenu/customization/loadingrequirement/requirements/MouseClickedRequirement.java 	common/src/main/java/de/keksuccino/fancymenu/customization/variables/ManageVariablesScreen.java 	common/src/main/java/de/keksuccino/fancymenu/mixin/mixins/common/client/MixinTitleScreen.java 	common/src/main/java/de/keksuccino/fancymenu/util/rendering/ui/contextmenu/v2/ContextMenu.java 	common/src/main/java/de/keksuccino/fancymenu/util/rendering/ui/screen/texteditor/TextEditorScreen.java